Добавил application.properties и переместил все файлы для 5-6 лабы в отдельную папку. Добавлен spring boot